--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
       <a class="navbar-brand" href="#">Viagem Azul</a>
@@ -31,10 +31,10 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
+  
   <section class="bg-light text-center p-5">
     <div class="container">
-        <img src="img1.jpg" alt=""
+        <img src="img/img1.jpg" alt=""
         width="100%"
         >
         <h1 class="mt-4">Explore o Mundo Conosco!</h1>
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <!-- Seção de Destinos -->
+  
   <section class="py-5">
     <div class="container text-center">
       <h2>Destinos Populares</h2>
@@ -50,7 +50,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="card">
-            <img src="project_350_image_fachada_rustica.jpg" alt="">
+            <img src="img/project_350_image_fachada_rustica.jpg" alt="">
             <div class="card-body">
               <h5 class="card-title">Paris, França</h5>
               <p class="card-text">Conheça a Cidade Luz e seus monumentos icônicos.</p>
@@ -59,7 +59,7 @@
         </div>
         <div class="col-md-6">
           <div class="card">
-            <img src="foto06emp-101-casa-b7.webp" alt=""
+            <img src="img/foto06emp-101-casa-b7.webp" alt=""
             width="100%"
             height="300px">
             <div class="card-body">
@@ -72,7 +72,7 @@
     </div>
   </section>
 
-  <!-- Rodapé -->
+  
   <footer class="bg-primary text-white text-center py-3">
     <div class="container">
       <p>&copy; 2024 Agência Viagem Azul. Todos os direitos reservados.</p>
